// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas a GifExpertApp debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="lego"
      key="lego"
    />
    <GifGrid
      category="spartan"
      key="spartan"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas a GifExpertApp debe mostrar una lista de categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="lego"
      key="lego"
    />
    <GifGrid
      category="spartan"
      key="spartan"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas a GifExpertApp debe renderizarse correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
